EMBCESSMOD-5477: fix delete household member dialog button alignment

--- a/registrants/src/UI/embc-registrant/src/app/core/components/dialog-components/information-dialog/information-dialog.component.scss
+++ b/registrants/src/UI/embc-registrant/src/app/core/components/dialog-components/information-dialog/information-dialog.component.scss
@@ -4,6 +4,8 @@
 
 .button-width {
   min-width: 40%;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .button-row {
